# gflynngame

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx  ConnectionManager.tsx
client/src/Game/: AppHome.tsx  CardSelector.tsx  ConnectionManager.tsx  ConnectionState.tsx  Event.tsx  Game.tsx  GameContext.tsx  GameRouter.tsx  Home.tsx  Lobby.tsx  SecretHitler.ts  SecretHitlerContext.tsx  SocketContext.tsx  Vote.tsx
client/src/Socket/: socket.ts
client/src/styles/: colors.ts  fonts.ts
game-server/: pyproject.toml
game-server/src/server/: app.py  extensions.py  routes.py
game-server/src/server/game/: enums.py  game.py  game_exceptions.py  lobby.py  lobby_manager.py  player.py  player_profile.py  policy_manager.py  user.py  vote_manager.py
game-server/src/server/lobby/: constants.py  lobby.py  user.py
