[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Genevieve Flynn <g.a.flynn19@gmail.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.1"
python-dotenv = "^1.0.0"
flask-cors = "^3.0.10"
flask-socketio = "^5.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
